# Ilia-Volkov-Python

./: .breakpoints  My sort.py  main.py  pyproject.toml
Алгоритмы и структуры данных на Python. Базовый курс/Lesson 5/: Task 2.py
Основы языка Python/: HW3.py  HW4.py  HW5.py  code 1.py  code 2.py  code 3.py  homework 1.1.py  homework 1.2.py  homework 1.3.py  homework 2.2.py  homework 2.4.py  homework 2.5.py  homework 6.1.py  homework 6.3.py  homework 6.6 add.py  homework 6.6 edit.py  homework 7.1.py  homework 7.3.py  homework 7.4.py  homework 8.1.py  homework 8.3.py  homework 9.1.py  homework 9.2.py  homework 9.3.py
