[tool.poetry]
name = "repl_python3_beta_Ilia-Volkov-Python"
version = "0.1.0"
description = ""
authors = ["StandinNeon <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
guppy3 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
